crates/runtime-macros/src/snapshots/zeroship_runtime_macros__v8_iterable_tests__iterable_snapshot_mode.snap
---
source: crates/runtime-macros/src/v8_iterable_tests.rs
expression: format_expansion(out)
---
/// Default-pair iterator companion for the parent class
/// (snapshot-mode). Holds a snapshot of `value_pairs()`
/// taken at factory-call time; `next()` walks the snapshot.
/// Snapshot is a deliberate simplification of WebIDL
/// §3.7.10.2 live-iteration — see `v8_iterable.rs` doc-
/// comment for the rationale.
#[doc(hidden)]
#[allow(non_camel_case_types)]
pub struct ReadOnlyMapIterator {
    /// Snapshot of (K, V) pairs taken at factory-call time.
    /// Owned by this iterator; dropped with the JS wrapper's
    /// finalizer.
    __pairs: ::std::vec::Vec<(ByteString, ByteString)>,
    /// Current index into `__pairs`. Increments on each
    /// successful `next()` call.
    __index: usize,
    /// Iterator kind — selects which of the (K, V) tuple to
    /// surface as the `value` field of `IteratorResult`.
    ///   0 = keys, 1 = values, 2 = entries
    __kind: i32,
}
#[doc(hidden)]
#[allow(non_camel_case_types)]
pub struct __InstallSlot_ReadOnlyMapIterator(::v8::Global<::v8::FunctionTemplate>);
#[doc(hidden)]
#[allow(non_camel_case_types)]
pub struct __BrandSlot_ReadOnlyMapIterator(::v8::Eternal<::v8::Object>);
/// Brand-check helper for the iterator class: walks the
/// prototype chain of `obj` looking for the cached
/// `<Class>Iterator.prototype`. Returns true on match (the
/// receiver IS a `<Class>Iterator`), false otherwise.
///
/// The previous `next()` codegen relied solely on
/// internal-field-0 being an `External`, which any
/// `#[v8_class]` wrapper satisfies. A caller could pass a
/// different wrapper as `this` and the recovery
/// `__ext.value() as *mut <Class>Iterator` would reinterpret a
/// `Box<Other>` as `*mut <Class>Iterator` — UB. The brand
/// check pins the receiver to instances of this iterator class
/// before the unsafe cast.
///
/// Walks at most 1024 prototype links — matches V8's internal
/// `Object::PrototypeChainLength` sanity bound. Cycle creation
/// is already blocked by ECMAScript §10.4.7.2 step 8; the cap
/// is belt-and-braces for proxy-driven prototype chains.
///
/// The cached prototype is populated lazily on first call (NOT
/// at install time) — eager `get_function(scope)` would freeze
/// the FunctionTemplate's instance shape. Mirrors the parent-
/// class `__brand_check_<Class>` helper in
/// `v8_class/emit/brand.rs`.
#[doc(hidden)]
#[allow(non_snake_case, dead_code)]
fn __brand_check_ReadOnlyMapIterator(
    scope: &mut v8::PinScope,
    obj: v8::Local<v8::Object>,
) -> bool {
    let expected_proto: v8::Local<v8::Object> = if let Some(slot) = scope
        .get_slot::<__BrandSlot_ReadOnlyMapIterator>()
    {
        match slot.0.get(scope) {
            Some(p) => p,
            None => return false,
        }
    } else {
        let tmpl_global = match scope.get_slot::<__InstallSlot_ReadOnlyMapIterator>() {
            Some(s) => s.0.clone(),
            None => return false,
        };
        let tmpl_local = v8::Local::new(scope, &tmpl_global);
        let func = match tmpl_local.get_function(scope) {
            Some(f) => f,
            None => return false,
        };
        let proto_key = match v8::String::new(scope, "prototype") {
            Some(s) => s,
            None => return false,
        };
        let proto_v = match func.get(scope, proto_key.into()) {
            Some(v) => v,
            None => return false,
        };
        let proto: v8::Local<v8::Object> = match proto_v.try_into() {
            Ok(o) => o,
            Err(_) => return false,
        };
        let eternal: v8::Eternal<v8::Object> = v8::Eternal::empty();
        eternal.set(scope, proto);
        scope.set_slot(__BrandSlot_ReadOnlyMapIterator(eternal));
        proto
    };
    let mut current: v8::Local<v8::Value> = match obj.get_prototype(scope) {
        Some(v) => v,
        None => return false,
    };
    for _ in 0..1024 {
        if current.is_null_or_undefined() {
            return false;
        }
        let cur_obj: v8::Local<v8::Object> = match current.try_into() {
            Ok(o) => o,
            Err(_) => return false,
        };
        if cur_obj == expected_proto {
            return true;
        }
        current = match cur_obj.get_prototype(scope) {
            Some(v) => v,
            None => return false,
        };
    }
    false
}
#[allow(non_snake_case, dead_code)]
impl ReadOnlyMapIterator {
    /// Install the iterator class's FunctionTemplate. The
    /// emitted shape mirrors `#[v8_class]` (one internal field
    /// for the boxed instance, Symbol.toStringTag = "<Class>
    /// Iterator", prototype chained to %IteratorPrototype% per
    /// WebIDL §3.7.10.2). Idempotent per isolate.
    pub fn install<'s>(
        scope: &mut v8::PinScope<'s, '_>,
    ) -> v8::Local<'s, v8::FunctionTemplate> {
        if let Some(cached) = scope.get_slot::<__InstallSlot_ReadOnlyMapIterator>() {
            return v8::Local::new(scope, cached.0.clone());
        }
        let __ctor_tmpl = v8::FunctionTemplate::new(scope, __zs_iter_construct_throws);
        let __class_name = v8::String::new(scope, "ReadOnlyMapIterator").unwrap();
        __ctor_tmpl.set_class_name(__class_name);
        __ctor_tmpl.instance_template(scope).set_internal_field_count(1);
        let __proto = __ctor_tmpl.prototype_template(scope);
        {
            let __key = v8::String::new(scope, "next").unwrap();
            let __fn_tmpl = v8::FunctionTemplate::new(scope, __ReadOnlyMap_iter_next);
            __proto.set(__key.into(), __fn_tmpl.into());
        }
        {
            let __tag_sym = v8::Symbol::get_to_string_tag(scope);
            let __tag_value = v8::String::new(scope, "ReadOnlyMap Iterator").unwrap();
            __proto
                .set_with_attr(
                    __tag_sym.into(),
                    __tag_value.into(),
                    v8::PropertyAttribute::READ_ONLY | v8::PropertyAttribute::DONT_ENUM,
                );
        }
        {
            let __ctor_fn = __ctor_tmpl.get_function(scope).unwrap();
            let __proto_key = v8::String::new(scope, "prototype").unwrap();
            let __ctor_proto_v = __ctor_fn.get(scope, __proto_key.into()).unwrap();
            let __ctor_proto: v8::Local<v8::Object> = __ctor_proto_v.try_into().unwrap();
            let __js = v8::String::new(
                    scope,
                    "Object.getPrototypeOf(Object.getPrototypeOf([][Symbol.iterator]()))",
                )
                .unwrap();
            let __script = v8::Script::compile(scope, __js, None).unwrap();
            let __iter_proto = __script.run(scope).unwrap();
            __ctor_proto.set_prototype(scope, __iter_proto);
        }
        let __global = ::v8::Global::new(scope, __ctor_tmpl);
        let __local = ::v8::Local::new(scope, __global.clone());
        scope.set_slot(__InstallSlot_ReadOnlyMapIterator(__global));
        __local
    }
}
/// `new <Class>Iterator()` is not user-callable per WebIDL —
/// iterator objects are constructed by the parent's keys() /
/// values() / entries() factories. The exposed constructor
/// throws TypeError synchronously.
#[doc(hidden)]
#[allow(non_snake_case, unused_variables)]
pub(crate) fn __zs_iter_construct_throws(
    scope: &mut v8::PinScope,
    _args: v8::FunctionCallbackArguments,
    _rv: v8::ReturnValue,
) {
    let __msg = v8::String::new(
            scope,
            ::std::concat!(
                "Illegal constructor: ", "ReadOnlyMapIterator",
                " can only be created via the parent's keys() / values() / entries()",
            ),
        )
        .unwrap();
    let __exc = v8::Exception::type_error(scope, __msg);
    scope.throw_exception(__exc);
}
/// Allocate an iterator instance with the given kind. In
/// snapshot mode this clones `value_pairs()` and stashes the
/// vec; in live mode this captures a `Global<Object>` of the
/// parent and defers the value_pairs() reads to each `next()`.
/// Brand-checks the receiver against the parent class.
#[doc(hidden)]
#[allow(non_snake_case, unused_variables, unused_mut)]
fn __zs_iter_factory_impl(
    scope: &mut v8::PinScope,
    args: v8::FunctionCallbackArguments,
    mut rv: v8::ReturnValue,
    __kind: i32,
) {
    let __this = args.this();
    if !__brand_check_ReadOnlyMap(scope, __this) {
        let __msg = v8::String::new(scope, "Illegal invocation").unwrap();
        let __exc = v8::Exception::type_error(scope, __msg);
        scope.throw_exception(__exc);
        return;
    }
    let __ext = match __this
        .get_internal_field(scope, 0)
        .and_then(|v| v8::Local::<v8::External>::try_from(v).ok())
    {
        Some(e) => e,
        None => {
            let __msg = v8::String::new(scope, "Illegal invocation").unwrap();
            let __exc = v8::Exception::type_error(scope, __msg);
            scope.throw_exception(__exc);
            return;
        }
    };
    let __inflight_addr = __ext.value() as usize;
    let __instance_ptr: *const ReadOnlyMap = __ext.value() as *const ReadOnlyMap;
    let __pairs: ::std::vec::Vec<(ByteString, ByteString)> = {
        let __instance: &ReadOnlyMap = unsafe { &*__instance_ptr };
        __instance.value_pairs()
    };
    drop(__ext);
    let __it_tmpl = ReadOnlyMapIterator::install(scope);
    let __it_inst_tmpl = __it_tmpl.instance_template(scope);
    let __it_obj = match __it_inst_tmpl.new_instance(scope) {
        Some(o) => o,
        None => {
            let __msg = v8::String::new(scope, "Failed to allocate iterator").unwrap();
            let __exc = v8::Exception::error(scope, __msg);
            scope.throw_exception(__exc);
            return;
        }
    };
    let __it_class_fn = __it_tmpl.get_function(scope).unwrap();
    let __proto_key = v8::String::new(scope, "prototype").unwrap();
    let __it_proto_v = __it_class_fn.get(scope, __proto_key.into()).unwrap();
    __it_obj.set_prototype(scope, __it_proto_v);
    let __boxed = ::std::boxed::Box::new(ReadOnlyMapIterator {
        __pairs,
        __index: 0,
        __kind,
    });
    let __raw = ::std::boxed::Box::into_raw(__boxed);
    let __raw_addr = __raw as usize;
    let __ext = v8::External::new(scope, __raw as *mut ::std::ffi::c_void);
    __it_obj.set_internal_field(0, __ext.into());
    let __weak = v8::Weak::with_guaranteed_finalizer(
        scope,
        __it_obj,
        ::std::boxed::Box::new(move || unsafe {
            drop(::std::boxed::Box::from_raw(__raw_addr as *mut ReadOnlyMapIterator));
        }),
    );
    ::std::mem::forget(__weak);
    rv.set(__it_obj.into());
}
#[doc(hidden)]
#[allow(non_snake_case)]
pub(crate) fn __ReadOnlyMap_iter_factory_keys(
    scope: &mut v8::PinScope,
    args: v8::FunctionCallbackArguments,
    rv: v8::ReturnValue,
) {
    __zs_iter_factory_impl(scope, args, rv, 0i32);
}
#[doc(hidden)]
#[allow(non_snake_case)]
pub(crate) fn __ReadOnlyMap_iter_factory_values(
    scope: &mut v8::PinScope,
    args: v8::FunctionCallbackArguments,
    rv: v8::ReturnValue,
) {
    __zs_iter_factory_impl(scope, args, rv, 1i32);
}
#[doc(hidden)]
#[allow(non_snake_case)]
pub(crate) fn __ReadOnlyMap_iter_factory_entries(
    scope: &mut v8::PinScope,
    args: v8::FunctionCallbackArguments,
    rv: v8::ReturnValue,
) {
    __zs_iter_factory_impl(scope, args, rv, 2i32);
}
/// `forEach(callback, thisArg?)`. Invokes `callback(value, key,
/// this)` for each pair, where `this` is the parent collection
/// instance.
///
/// In snapshot mode, `value_pairs()` is read once before the
/// loop; mutations made by the callback do NOT show up in the
/// remaining iterations. In live mode, `value_pairs()` is re-
/// read between callbacks per WebIDL §3.7.10.3.
#[doc(hidden)]
#[allow(non_snake_case, unused_variables, unused_mut)]
pub(crate) fn __ReadOnlyMap_for_each(
    scope: &mut v8::PinScope,
    args: v8::FunctionCallbackArguments,
    _rv: v8::ReturnValue,
) {
    let __this = args.this();
    if !__brand_check_ReadOnlyMap(scope, __this) {
        let __msg = v8::String::new(scope, "Illegal invocation").unwrap();
        let __exc = v8::Exception::type_error(scope, __msg);
        scope.throw_exception(__exc);
        return;
    }
    let __ext = match __this
        .get_internal_field(scope, 0)
        .and_then(|v| v8::Local::<v8::External>::try_from(v).ok())
    {
        Some(e) => e,
        None => {
            let __msg = v8::String::new(scope, "Illegal invocation").unwrap();
            let __exc = v8::Exception::type_error(scope, __msg);
            scope.throw_exception(__exc);
            return;
        }
    };
    let __inflight_addr = __ext.value() as usize;
    let __instance_ptr: *const ReadOnlyMap = __ext.value() as *const ReadOnlyMap;
    let __cb_arg = args.get(0);
    let __cb_fn: v8::Local<v8::Function> = match __cb_arg.try_into() {
        Ok(f) => f,
        Err(_) => {
            let __msg = v8::String::new(scope, "forEach callback is not callable")
                .unwrap();
            let __exc = v8::Exception::type_error(scope, __msg);
            scope.throw_exception(__exc);
            return;
        }
    };
    let __this_arg = args.get(1);
    let __pairs: ::std::vec::Vec<(ByteString, ByteString)> = {
        let __instance: &ReadOnlyMap = unsafe { &*__instance_ptr };
        __instance.value_pairs()
    };
    drop(__ext);
    for (__k, __v) in __pairs.into_iter() {
        let __bytes_ref: &[u8] = ::std::convert::AsRef::as_ref(&__k);
        let __k_v: v8::Local<v8::Value> = v8::String::new_from_one_byte(
                scope,
                __bytes_ref,
                v8::NewStringType::Normal,
            )
            .unwrap()
            .into();
        let __bytes_ref: &[u8] = ::std::convert::AsRef::as_ref(&__v);
        let __v_v: v8::Local<v8::Value> = v8::String::new_from_one_byte(
                scope,
                __bytes_ref,
                v8::NewStringType::Normal,
            )
            .unwrap()
            .into();
        let __cb_args = [__v_v, __k_v, __this.into()];
        if __cb_fn.call(scope, __this_arg, &__cb_args).is_none() {
            return;
        }
    }
}
/// `<Class>Iterator.prototype.next()`. Returns `{ value, done }`
/// per the JS Iterator protocol.
///
/// Snapshot mode walks the cached `__pairs` vector. Live mode
/// re-localises the parent and calls `value_pairs()` afresh on
/// each call, indexing at the current cursor.
#[doc(hidden)]
#[allow(non_snake_case, unused_variables, unused_mut)]
pub(crate) fn __ReadOnlyMap_iter_next(
    scope: &mut v8::PinScope,
    args: v8::FunctionCallbackArguments,
    mut rv: v8::ReturnValue,
) {
    let __this = args.this();
    if !__brand_check_ReadOnlyMapIterator(scope, __this) {
        let __msg = v8::String::new(
                scope,
                "ReadOnlyMapIterator.prototype.next called on incompatible receiver",
            )
            .unwrap();
        let __exc = v8::Exception::type_error(scope, __msg);
        scope.throw_exception(__exc);
        return;
    }
    let __ext = match __this
        .get_internal_field(scope, 0)
        .and_then(|v| v8::Local::<v8::External>::try_from(v).ok())
    {
        Some(e) => e,
        None => {
            let __msg = v8::String::new(scope, "Illegal invocation").unwrap();
            let __exc = v8::Exception::type_error(scope, __msg);
            scope.throw_exception(__exc);
            return;
        }
    };
    let __it: &mut ReadOnlyMapIterator = unsafe {
        &mut *(__ext.value() as *mut ReadOnlyMapIterator)
    };
    if __it.__index >= __it.__pairs.len() {
        let __res = v8::Object::new(scope);
        let __vk = v8::String::new(scope, "value").unwrap();
        let __dk = v8::String::new(scope, "done").unwrap();
        let __undef = v8::undefined(scope);
        let __true = v8::Boolean::new(scope, true);
        __res.set(scope, __vk.into(), __undef.into());
        __res.set(scope, __dk.into(), __true.into());
        rv.set(__res.into());
        return;
    }
    let (__k, __v): (ByteString, ByteString) = __it.__pairs[__it.__index].clone();
    __it.__index += 1;
    let __kind = __it.__kind;
    let _ = __it;
    let __bytes_ref: &[u8] = ::std::convert::AsRef::as_ref(&__k);
    let __k_v: v8::Local<v8::Value> = v8::String::new_from_one_byte(
            scope,
            __bytes_ref,
            v8::NewStringType::Normal,
        )
        .unwrap()
        .into();
    let __bytes_ref: &[u8] = ::std::convert::AsRef::as_ref(&__v);
    let __v_v: v8::Local<v8::Value> = v8::String::new_from_one_byte(
            scope,
            __bytes_ref,
            v8::NewStringType::Normal,
        )
        .unwrap()
        .into();
    let __value: v8::Local<v8::Value> = match __kind {
        0i32 => __k_v,
        1i32 => __v_v,
        _ => {
            let __arr = v8::Array::new(scope, 2);
            __arr.set_index(scope, 0, __k_v);
            __arr.set_index(scope, 1, __v_v);
            __arr.into()
        }
    };
    let __res = v8::Object::new(scope);
    let __vk = v8::String::new(scope, "value").unwrap();
    let __dk = v8::String::new(scope, "done").unwrap();
    let __false = v8::Boolean::new(scope, false);
    __res.set(scope, __vk.into(), __value);
    __res.set(scope, __dk.into(), __false.into());
    rv.set(__res.into());
}
#[allow(non_snake_case, dead_code)]
impl ReadOnlyMap {
    /// Called from `<Class>::install` to layer the iterable
    /// surface (keys / values / entries / forEach / @@iterator)
    /// onto the parent's prototype. Idempotent: safe to call
    /// multiple times within an isolate; the second call
    /// overwrites with identical templates.
    ///
    /// The macro hard-codes `entries()` as the @@iterator
    /// alias per WebIDL §3.7.10 default-iterator semantics.
    #[doc(hidden)]
    pub(crate) fn __zs_install_iterable_methods<'s>(
        scope: &mut v8::PinScope<'s, '_>,
        proto: v8::Local<'s, v8::ObjectTemplate>,
    ) {
        {
            let __key = v8::String::new(scope, "keys").unwrap();
            let __tmpl = v8::FunctionTemplate::new(
                scope,
                __ReadOnlyMap_iter_factory_keys,
            );
            proto.set(__key.into(), __tmpl.into());
        }
        {
            let __key = v8::String::new(scope, "values").unwrap();
            let __tmpl = v8::FunctionTemplate::new(
                scope,
                __ReadOnlyMap_iter_factory_values,
            );
            proto.set(__key.into(), __tmpl.into());
        }
        let __entries_tmpl = v8::FunctionTemplate::new(
            scope,
            __ReadOnlyMap_iter_factory_entries,
        );
        {
            let __key = v8::String::new(scope, "entries").unwrap();
            proto.set(__key.into(), __entries_tmpl.into());
        }
        {
            let __key = v8::String::new(scope, "forEach").unwrap();
            let __tmpl = v8::FunctionTemplate::new(scope, __ReadOnlyMap_for_each);
            proto.set(__key.into(), __tmpl.into());
        }
        {
            let __sym = v8::Symbol::get_iterator(scope);
            proto.set(__sym.into(), __entries_tmpl.into());
        }
    }
}
